logs/dbf_pipbuild.log
Removing old build directory
Removing old work directory
BUILD START: enum34-1.0.4-py27_0
Fetching package metadata: ......

WARNING: conda-build appears to be out of date. You have version 1.13.0 but the
latest version is 1.14.1. Run

conda update -n root conda-build

to get the latest version.

Solving package specifications: .+ pip install enum34
Collecting enum34
  Downloading http://localhost/packages/source/e/enum34/enum34-1.0.4.tar.gz
Installing collected packages: enum34
  Running setup.py install for enum34
Successfully installed enum34-1.0.4

The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1     
    pip:        7.0.3-py27_0 
    python:     2.7.10-0     
    readline:   6.2-2        
    setuptools: 18.0.1-py27_0
    sqlite:     3.8.4.1-1    
    system:     5.8-2        
    tk:         8.5.18-0     
    zlib:       1.2.8-0      

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/enum34 to /home/ubuntu/miniconda/conda-bld/work
Package: enum34-1.0.4-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
number of files: 14
Fixing permissions
Fixing permissions
BUILD END: enum34-1.0.4-py27_0
# If you want to upload this package to binstar.org later, type:
#
# $ binstar upload /home/ubuntu/miniconda/conda-bld/linux-64/enum34-1.0.4-py27_0.tar.bz2
#
# To have conda build upload to binstar automatically, use
# $ conda config --set binstar_upload yes

Removing old build directory
Removing old work directory
BUILD START: dbf-0.96.003-py_0
Fetching package metadata: ......

WARNING: conda-build appears to be out of date. You have version 1.13.0 but the
latest version is 1.14.1. Run

conda update -n root conda-build

to get the latest version.

Solving package specifications: .+ pip install dbf
Collecting dbf
  Downloading http://localhost/packages/source/d/dbf/dbf-0.96.003.tar.gz (183kB)
Requirement already satisfied (use --upgrade to upgrade): enum34 in /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages (from dbf)
Installing collected packages: dbf
  Running setup.py install for dbf
Successfully installed dbf-0.96.3
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/ver_33.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/ver_33.py", line 2577
    raise DbfError("unable to write updates to disk, original data restored: %r" % (exc,)) from None
                                                                                              ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    enum34:     1.0.4-py27_0 
    openssl:    1.0.1k-1     
    pip:        7.0.3-py27_0 
    python:     2.7.10-0     
    readline:   6.2-2        
    setuptools: 18.0.1-py27_0
    sqlite:     3.8.4.1-1    
    system:     5.8-2        
    tk:         8.5.18-0     
    zlib:       1.2.8-0      

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  10%[sqlite              ]|##########                                        |  20%[system              ]|###############                                   |  30%[tk                  ]|####################                              |  40%[zlib                ]|#########################                         |  50%[enum34              ]|##############################                    |  60%[python              ]|###################################               |  70%[setuptools          ]|########################################          |  80%[pip                 ]|#############################################     |  90%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/dbf to /home/ubuntu/miniconda/conda-bld/work
Package: dbf-0.96.003-py_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Package search: {'_pypi_ordering': False, 'version': '0.96.003', 'name': 'dbf', 'summary': 'Pure python package for reading/writing dBase, FoxPro, and Visual FoxPro .dbf files (including memos)'}
Creating standard recipe for dbf-0.96.003
Converting recipe in /home/ubuntu/pypi-conda-builds/dbf
package = dbf
   dependencies = [u'enum34']
Creating standard recipe for enum34
Converting recipe in /home/ubuntu/pypi-conda-builds/enum34
package = enum34
   dependencies = []
Building conda package for enum34
Building conda package for dbf
